# scope_bug

./: CMakeLists.txt  README.md  client.cpp  serverimpl1.cpp  serverimpl2.cpp
.github/workflows/: ci.yml
